# BUILD 文件内容

# 1. 定义核心库 (engine.c / engine.h)
cc_library(
    name = "engine_lib",
    srcs = ["src/engine.c"],
    hdrs = ["src/engine.h"],
    includes = ["src"], # 允许 #include "engine.h"
    visibility = ["//visibility:public"],
)

# 2. 定义主程序 (main.c)
cc_binary(
    name = "firmware",
    srcs = ["src/main.c"],
    deps = [":engine_lib"], # 依赖上面的库
)

# 3. 定义单元测试
cc_test(
    name = "unit_test",
    srcs = ["tests/test_engine.c"],
    deps = [":engine_lib"],
)